<resources>
    <string name="app_name">Self</string>
    <string name="title_text">Self Gratitude Journal</string>
    <string name="greateful_text">What are you Grateful for?</string>
    <string name="get_started_text">Get Started</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="or_text">Or</string>
    <string name="create_text">Create Account</string>
    <string name="username_hint">Username</string>
    <string name="save_button">Save</string>
    <string name="post_title">Title</string>
    <string name="post_thoughts">Your Thoughts...</string>
    <string name="menu_title">Add Thoughts</string>
    <string name="signout">Signout</string>
    <string name="no_thoughts_hint">Write a Journal Entry by clicking the + icon above</string>
</resources>