<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg"
    android:padding="16dp"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

<!--    ProgressBar is to like show something in progress when an action is ongoing-->
<!--    E.g when trying to login-->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<!--        AutoComplete helps user to auto complete I think, e.g when type email-->
<!--        inputType set as textEmailAddress-->
        <AutoCompleteTextView
            android:id="@+id/email"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

<!--        Use textPassword inputType in this case-->
        <EditText
            android:id="@+id/password"
            android:hint="@string/password_hint"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/email_sign_in_button"
            android:textColor="@color/teal_200"
            android:text="@string/login_text"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:background="@drawable/gradient_bg"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/or_text"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/create_acct_button_login"
            android:textColor="@color/teal_200"
            android:text="@string/create_text"
            android:background="@android:color/transparent"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>