<?xml version="1.0" encoding="utf-8"?>
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!-- To put all the items in the center, we use gravity:center for our LinearLayout-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="18dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:text="@string/title_text"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

<!--    For the Card, cardElevation will like give it that pop up feel, got shadow also-->
<!--    Also, need to use cardUseCompatPadding to have the effect-->
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <TextView
                android:id="@+id/gratefulText"
                android:layout_gravity="center"
                android:text="@string/greateful_text"
                android:textSize="19sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <Button
        android:id="@+id/startButton"
        android:text="@string/get_started_text"
        android:textColor="@color/teal_200"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>